force-app/main/default/objects/Lead/fields/Zendesk__notes__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>