force-app/main/default/objects/Lead/recordTypes/Channel_Lead.recordType-meta.xml
<RecordType>
    <fullName>Channel_Lead</fullName>
    <active>true</active>
    <businessProcess>Lead Process %28Channel%29</businessProcess>
    <label>Channel Lead</label>
</RecordType>