force-app/main/default/objects/Lead/recordTypes/Consumer.recordType-meta.xml
<RecordType>
    <fullName>Consumer</fullName>
    <active>true</active>
    <businessProcess>Consumer</businessProcess>
    <label>Consumer</label>
</RecordType>