force-app/main/default/objects/Lead/recordTypes/Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Lead Process %28Direct%29</businessProcess>
    <label>Business Lead</label>
</RecordType>