force-app/main/default/objects/Lead/validationRules/Check_rating_if_qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_rating_if_qualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    TEXT( Status) = &quot;Qualified&quot;,
    TEXT( Status) = &quot;Converted&quot;
  ),
  OR(
    TEXT(Rating) = &quot;Incomplete&quot;,
    TEXT(Rating) = &quot;&quot;
  )
)</errorConditionFormula>
    <errorDisplayField>Rating</errorDisplayField>
    <errorMessage>Please ensure the rating is set if the lead is qualified or converted.
Hot - decision within 2 months. Warm - decision within 2-6 months. Cold - longer/unknown.</errorMessage>
</ValidationRule>