force-app/main/default/objects/Lead/validationRules/Enter_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Address</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Address)</errorConditionFormula>
    <errorMessage>Please enter the address details</errorMessage>
</ValidationRule>