force-app/main/default/objects/Lead/validationRules/Lead_Interest_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Interest_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(INCLUDES( Lead_Interest__c , &quot;Other&quot;),
ISBLANK( Lead_Interest_Other__c ))</errorConditionFormula>
    <errorDisplayField>Lead_Interest_Other__c</errorDisplayField>
    <errorMessage>Please enter other lead interest</errorMessage>
</ValidationRule>