force-app/main/default/objects/Lead/validationRules/Other_Industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Industry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(  Industry , &quot;Other&quot;),
ISBLANK(  Other_Industry__c  ))</errorConditionFormula>
    <errorDisplayField>Other_Industry__c</errorDisplayField>
    <errorMessage>Please Specify &apos;Other&apos; Industry</errorMessage>
</ValidationRule>