force-app/main/default/objects/Lead/validationRules/Other_Lead_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Lead_Source</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( LeadSource , &quot;Other&quot;),
ISBLANK( Other_Lead_Source__c ))</errorConditionFormula>
    <errorDisplayField>Other_Lead_Source__c</errorDisplayField>
    <errorMessage>Please provide &apos;Other&apos; lead source</errorMessage>
</ValidationRule>