force-app/main/default/objects/Lead/validationRules/Paid_Lead_Source_Provided.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Lead_Source_Provided</fullName>
    <active>true</active>
    <description>Ensure paid lead source is completed if lead source is paid lead.</description>
    <errorConditionFormula>AND(ISPICKVAL( LeadSource, &quot;Paid Lead&quot;), 
ISPICKVAL(  Paid_Lead_Source__c,&quot;&quot;  ))</errorConditionFormula>
    <errorDisplayField>Paid_Lead_Source__c</errorDisplayField>
    <errorMessage>You must select a paid lead source if you have selected the lead source as paid lead.</errorMessage>
</ValidationRule>