force-app/main/default/objects/Lead/listViews/All_disqualified_leads.listView-meta.xml
<ListView>
    <fullName>All_disqualified_leads</fullName>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Disqualified_Reason__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Disqualified</value>
    </filters>
    <label>All disqualified leads</label>
</ListView>