force-app/main/default/objects/Lead/listViews/All_qualified_and_contacted_leads.listView-meta.xml
<ListView>
    <fullName>All_qualified_and_contacted_leads</fullName>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Current_Phone_System__c</columns>
    <columns>Internet_Provider__c</columns>
    <columns>Internet_Contract_Expiry_Date__c</columns>
    <columns>Network_Contract_Exp_Date__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Qualified,Contacted</value>
    </filters>
    <label>All qualified and contacted leads</label>
</ListView>