force-app/main/default/objects/Lead/listViews/All_unqualified_leads.listView-meta.xml
<ListView>
    <fullName>All_unqualified_leads</fullName>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unqualified</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>terin</value>
    </filters>
    <label>All unqualified leads</label>
</ListView>