force-app/main/default/objects/Lead/listViews/Channel_Leads.listView-meta.xml
<ListView>
    <fullName>Channel_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.INDUSTRY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Channel_Lead</value>
    </filters>
    <label>My Channel Leads</label>
</ListView>