force-app/main/default/objects/Lead/listViews/Giganet_Website_Quote_Leads.listView-meta.xml
<ListView>
    <fullName>Giganet_Website_Quote_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.ZIP</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source_Reference__c</field>
        <operation>equals</operation>
        <value>Giganet_Quote_Tool_Website</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unqualified</value>
    </filters>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Giganet Website Quote Leads</label>
</ListView>