force-app/main/default/objects/Lead/listViews/My_Active_Leads.listView-meta.xml
<ListView>
    <fullName>My_Active_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unqualified,Open,Contacted,Qualified</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>2/17/2022 12:00 AM</value>
    </filters>
    <label>My Active Leads</label>
</ListView>